Update project tags

--- a/portfolio.html
+++ b/portfolio.html
@@ -27,7 +27,9 @@
                 <h2 class="project-title">Capstone Project - Sensor Fusion for FPV Drones</h2>
                 <div class="project-status-tags">
                     <img src="https://img.shields.io/badge/ESP32-black">
-                    <img src="https://img.shields.io/badge/Work_in_progress-yellow">
+                    <img src="https://img.shields.io/badge/RSCA_2025_Winner-darkgreen">
+                    <img src="https://img.shields.io/badge/Completed_2025-green">
+                    <!-- <img src="https://img.shields.io/badge/Work_in_progress-yellow"> -->
                 </div>
             </div>
             <img src="./images/capstone/calibration.gif" class="thumbnail">
@@ -72,7 +74,7 @@
                 <h2 class="project-title">Conway's <em>Game of Life</em> in Verilog</h2>
                 <div class="project-status-tags">
                     <img src="https://img.shields.io/badge/Nexys_A7-3d902a">
-                    <img src="https://img.shields.io/badge/Assignment-blue">
+                    <img src="https://img.shields.io/badge/Class_Assignment-blue">
                     <img src="https://img.shields.io/badge/Completed_2023-green">
                 </div>
             </div>
