Update capstone title

--- a/portfolio.html
+++ b/portfolio.html
@@ -24,7 +24,7 @@
 
         <button class="project-link" onclick="showProjectViewer('capstone')">
             <div class="project-info">
-                <h2 class="project-title">Capstone Project - Sensor Fusion for FPV Drones</h2>
+                <h2 class="project-title">Capstone Project - VR-analogous Camera Control System for FPV Pilots</h2>
                 <div class="project-status-tags">
                     <img src="https://img.shields.io/badge/ESP32-black">
                     <img src="https://img.shields.io/badge/RSCA_2025_Winner-darkgreen">
