--- a/portfolio.html
+++ b/portfolio.html
@@ -5,6 +5,7 @@
     <meta charset="UTF=8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preload" href="./images/loading.gif" as="image">
     <link rel="stylesheet" type="text/css" href="styles/portfolio.css" />
     <script src="./portfolio.js"></script>
     <script type="module" src="https://md-block.verou.me/md-block.js"></script> <!-- Used for markdown rendering -->
