--- a/booplatro.html
+++ b/booplatro.html
@@ -6,8 +6,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Booplatro</title>
     <link rel="stylesheet" href="./styles/booplatro.css">
+    <link rel="stylesheet" href="./styles/scanlines.css">
 </head>
-<body>
+<body class="scanlines">
     <!-- <div class="card-container">
         <div class="card">
             <img src="./images/booplatro/powerarmor.png">
