--- a/booplatro.html
+++ b/booplatro.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="./styles/booplatro.css">
     <link rel="stylesheet" href="./styles/scanlines.css">
 </head>
-<body class="scanlines">
+<body class="scanlines" style="background-color:#35654d;">
     <script src="booplatro.js"></script>
 </body>
 </html>
