--- a/booplatro/index.html
+++ b/booplatro/index.html
@@ -7,8 +7,10 @@
     <title>Booplatro</title>
     <link rel="stylesheet" href="../styles/booplatro.css">
     <link rel="stylesheet" href="../styles/scanlines.css">
+    <link href="https://pound-os.neocities.org/balatro.css" rel="stylesheet">
 </head>
     <body class="scanlines" style="background-color:#35654d;">
+        <div id="card-grid"></div>
         <script src="../booplatro/booplatro.js"></script>
     </body>
 </html>
