--- a/booplatro/index.html
+++ b/booplatro/index.html
@@ -5,6 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <title>Booplatro</title>
+        <link rel="icon" href="./icon.png">
         <link rel="stylesheet" href="../styles/booplatro.css">
         <link rel="stylesheet" href="../styles/scanlines.css">
         <link href="https://pound-os.neocities.org/balatro.css" rel="stylesheet">
