Song and asset upload

--- a/booplatro/index.html
+++ b/booplatro/index.html
@@ -26,6 +26,9 @@
             <link rel="preload" href="../images/booplatro/waka.png" as="image">
     </head>
     <body class="scanlines" style="background-color:#35654d;">
+        <audio id="bg-audio" src="./track.wav" loop></audio>
+
+        <img src="../images/booplatro/banner.png" id="banner">
         <div id="card-grid"></div>
         <script src="../booplatro/booplatro.js"></script>
     </body>
