bday message stuff

--- a/booplatro/index.html
+++ b/booplatro/index.html
@@ -30,6 +30,16 @@
 
         <img src="../images/booplatro/banner.png" id="banner">
         <div id="card-grid"></div>
+
+        <div class="outer-desc" id="sidebar">
+            <h1 class="joker-title" id="sidebar-title"></h1>
+            <div class="inner-desc">
+                <span id="sidebar-content"></span>
+            </div>
+        </div>
+
+        <h1 id="bday-text"></h1>
+
         <script src="../booplatro/booplatro.js"></script>
     </body>
 </html>
