Create audio dir + win sound

--- a/booplatro/index.html
+++ b/booplatro/index.html
@@ -26,9 +26,10 @@
             <link rel="preload" href="../images/booplatro/waka.png" as="image">
     </head>
     <body class="scanlines" style="background-color:#35654d;">
-        <audio id="bg-audio" src="./track.mp3" loop></audio>
-        <audio id="bg-audio-miku" src="./mikutrack.mp3" loop></audio>
-        <audio id="flip-audio" src="./flip.wav"></audio>
+        <audio id="bg-audio" src="./audio/track.mp3" loop></audio>
+        <audio id="bg-audio-miku" src="./audio/mikutrack.mp3" loop></audio>
+        <audio id="flip-audio" src="./audio/flip.wav"></audio>
+        <audio id="win-audio" src="./audio/win.wav"></audio>
 
         <img src="../images/booplatro/banner.png" id="banner">
         <div id="card-grid"></div>
