--- a/booplatro/index.html
+++ b/booplatro/index.html
@@ -10,20 +10,25 @@
         <link rel="stylesheet" href="../styles/scanlines.css">
         <link href="https://pound-os.neocities.org/balatro.css" rel="stylesheet">
 
-            <link rel="preload" href="../images/booplatro/ada.png" as="image">
-            <link rel="preload" href="../images/booplatro/cardback.png" as="image">
-            <link rel="preload" href="../images/booplatro/clar.png" as="image">
-            <link rel="preload" href="../images/booplatro/deathclaw.png" as="image">
-            <link rel="preload" href="../images/booplatro/hollow.png" as="image">
-            <link rel="preload" href="../images/booplatro/jane.png" as="image">
-            <link rel="preload" href="../images/booplatro/jesse.png" as="image">
-            <link rel="preload" href="../images/booplatro/leon.png" as="image">
-            <link rel="preload" href="../images/booplatro/luca.png" as="image">
-            <link rel="preload" href="../images/booplatro/miku.png" as="image">
-            <link rel="preload" href="../images/booplatro/powerarmor.png" as="image">
-            <link rel="preload" href="../images/booplatro/raymond.png" as="image">
-            <link rel="preload" href="../images/booplatro/vaultboy.png" as="image">
-            <link rel="preload" href="../images/booplatro/waka.png" as="image">
+        <link rel="preload" href="../images/booplatro/cardback.png" as="image">
+
+        <link rel="preload" href="../images/booplatro/leon.png" as="image">
+        <link rel="preload" href="../images/booplatro/ada.png" as="image">
+        <link rel="preload" href="../images/booplatro/jane.png" as="image">
+        <link rel="preload" href="../images/booplatro/hollow.png" as="image">
+        <link rel="preload" href="../images/booplatro/clar.png" as="image">
+
+        <link rel="preload" href="../images/booplatro/raymond.png" as="image">
+        <link rel="preload" href="../images/booplatro/jesse.png" as="image">
+        <link rel="preload" href="../images/booplatro/miku.png" as="image">
+        <link rel="preload" href="../images/booplatro/waka.png" as="image">
+        <link rel="preload" href="../images/booplatro/vaultboy.png" as="image">
+
+        <link rel="preload" href="../images/booplatro/deathclaw.png" as="image">
+        <link rel="preload" href="../images/booplatro/powerarmor.png" as="image">
+        <link rel="preload" href="../images/booplatro/chris.png" as="image">
+        <link rel="preload" href="../images/booplatro/luca.png" as="image">
+        <link rel="preload" href="../images/booplatro/eric.png" as="image">
     </head>
     <body class="scanlines" style="background-color:#35654d;">
         <audio id="bg-audio" src="./audio/track.mp3" loop></audio>
